# bevy_playground

./: Cargo.toml
assets/shaders/: animate_shader.wgsl
src/: animated_shader.rs  debug_line.rs  editor_enhanced.rs  follower.rs  level.rs  main.rs  player.rs
