[package]
name = "bevy_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6", features = ["dynamic"] }
bevy_rapier3d = { version = "0.12.1", features = [ "simd-stable" ] }
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls" }
bevy_mod_picking = "0.5"
bevy_mod_raycast = "0.3"
#bevy_obj = { version = "0.6" }
#heron = { version = "1.1.0", features = ["3d"] }
